--- a/_config.yml
+++ b/_config.yml
@@ -94,3 +94,10 @@ search:
   field: post
   format: html
   cotent: true
+# mermaid
+
+mermaid: ## mermaid url https://github.com/knsv/mermaid
+  enable: true  # default true
+  version: "7.1.2" # default v7.1.2
+  options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
+  #startOnload: true  // default true
