Update the google site verification, in xuzhou, on my T480. Drop baidu site verification for the noisy steps. Fix the last missing blog file via the push thread.

--- a/_config.yml
+++ b/_config.yml
@@ -101,3 +101,10 @@ mermaid: ## mermaid url https://github.com/knsv/mermaid
   version: "7.1.2" # default v7.1.2
   options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
   #startOnload: true  // default true
+
+# 自动生成sitemap
+sitemap:
+  path: sitemap.xml
+# baidu sitemap
+#baidusitemap:
+#  path: baidusitemap.xml
