--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -615,7 +615,7 @@ needmoreshare2:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters
-#google_site_verification:
+google_site_verification: true
 
 # Google Analytics
 #google_analytics:
@@ -630,7 +630,7 @@ needmoreshare2:
 
 # Baidu Webmaster tools verification setting
 # See: https://ziyuan.baidu.com/site
-#baidu_site_verification:
+baidu_site_verification: true
 
 # CNZZ count
 #cnzz_siteid:
